--- a/_lib/_main.ui
+++ b/_lib/_main.ui
@@ -15,30 +15,6 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="0">
-     <widget class="QGroupBox" name="groupBox">
-      <property name="title">
-       <string>Diffraction pattern</string>
-      </property>
-      <layout class="QGridLayout" name="gridLayout_4">
-       <item row="0" column="0">
-        <layout class="QVBoxLayout" name="verticalLayout_pat"/>
-       </item>
-      </layout>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QGroupBox" name="groupBox_2">
-      <property name="title">
-       <string>Parameters</string>
-      </property>
-      <layout class="QGridLayout" name="gridLayout_3">
-       <item row="0" column="0">
-        <layout class="QVBoxLayout" name="verticalLayout_par"/>
-       </item>
-      </layout>
-     </widget>
-    </item>
     <item row="0" column="0" colspan="2">
      <widget class="QGroupBox" name="groupBox_surf">
       <property name="sizePolicy">
@@ -57,6 +33,30 @@
       </layout>
      </widget>
     </item>
+    <item row="1" column="1">
+     <widget class="QGroupBox" name="groupBox_2">
+      <property name="title">
+       <string>Parameters</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_3">
+       <item row="0" column="0">
+        <layout class="QVBoxLayout" name="verticalLayout_par"/>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QGroupBox" name="groupBox">
+      <property name="title">
+       <string>Diffraction pattern</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_4">
+       <item row="0" column="0">
+        <layout class="QVBoxLayout" name="verticalLayout_pat"/>
+       </item>
+      </layout>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -68,9 +68,73 @@
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <widget class="QMenu" name="menuOpen_csv">
+     <property name="title">
+      <string>Open</string>
+     </property>
+     <addaction name="action_OpenCSV"/>
+     <addaction name="action_OpenDAT"/>
+     <addaction name="action_OpenPRF"/>
+     <addaction name="action_xye"/>
+     <addaction name="action_OpenXXY"/>
+    </widget>
+    <addaction name="menuOpen_csv"/>
+    <addaction name="separator"/>
+    <addaction name="actionUpdate"/>
+   </widget>
+   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionUpdate">
+   <property name="icon">
+    <iconset>
+     <normaloff>:/icons/Update.png</normaloff>:/icons/Update.png</iconset>
+   </property>
+   <property name="text">
+    <string>Update</string>
+   </property>
+  </action>
+  <action name="actionOpen_xyy">
+   <property name="icon">
+    <iconset>
+     <normaloff>:/icons/OpenFile.png</normaloff>:/icons/OpenFile.png</iconset>
+   </property>
+   <property name="text">
+    <string>Open *.xyy</string>
+   </property>
+  </action>
+  <action name="action_OpenCSV">
+   <property name="text">
+    <string>*.csv</string>
+   </property>
+  </action>
+  <action name="action_OpenXXY">
+   <property name="text">
+    <string>*.xyy</string>
+   </property>
+  </action>
+  <action name="action_OpenPRF">
+   <property name="text">
+    <string>*.prf</string>
+   </property>
+  </action>
+  <action name="action_OpenDAT">
+   <property name="text">
+    <string>*.dat</string>
+   </property>
+  </action>
+  <action name="action_xye">
+   <property name="text">
+    <string>*.xye</string>
+   </property>
+  </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
