--- a/_lib/icons.qrc
+++ b/_lib/icons.qrc
@@ -3,5 +3,6 @@
         <file>icons/OpenFile.png</file>
         <file>icons/SaveFile.png</file>
         <file>icons/Update.png</file>
+        <file>icons/Main.png</file>
     </qresource>
 </RCC>
