Batch file and shortcut
Added batch file and shortcut with icon.
Use 'zero' image rather than 'random noise' image as default.
'Update' button disabled until files are load first time.

--- a/_lib/_main.ui
+++ b/_lib/_main.ui
@@ -111,6 +111,9 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionUpdate">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
     <iconset resource="icons.qrc">
      <normaloff>:/icons/Update.png</normaloff>:/icons/Update.png</iconset>
