--- a/_lib/_main.ui
+++ b/_lib/_main.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1193</width>
-    <height>794</height>
+    <height>795</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,14 +25,14 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="0">
-     <widget class="QGroupBox" name="groupBox">
+    <item row="1" column="1">
+     <widget class="QGroupBox" name="groupBox_2">
       <property name="title">
-       <string>Diffraction pattern</string>
+       <string>Parameters</string>
       </property>
-      <layout class="QGridLayout" name="gridLayout_4">
+      <layout class="QGridLayout" name="gridLayout_3">
        <item row="0" column="0">
-        <layout class="QVBoxLayout" name="verticalLayout_pat"/>
+        <layout class="QVBoxLayout" name="verticalLayout_par"/>
        </item>
       </layout>
      </widget>
@@ -55,14 +55,14 @@
       </layout>
      </widget>
     </item>
-    <item row="1" column="1">
-     <widget class="QGroupBox" name="groupBox_2">
+    <item row="1" column="0">
+     <widget class="QGroupBox" name="groupBox">
       <property name="title">
-       <string>Parameters</string>
+       <string>Diffraction pattern</string>
       </property>
-      <layout class="QGridLayout" name="gridLayout_3">
+      <layout class="QGridLayout" name="gridLayout_4">
        <item row="0" column="0">
-        <layout class="QVBoxLayout" name="verticalLayout_par"/>
+        <layout class="QVBoxLayout" name="verticalLayout_pat"/>
        </item>
       </layout>
      </widget>
@@ -75,7 +75,7 @@
      <x>0</x>
      <y>0</y>
      <width>1193</width>
-     <height>21</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -120,6 +120,9 @@
    </property>
    <property name="text">
     <string>Update</string>
+   </property>
+   <property name="toolTip">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Re-read the selected files&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </action>
   <action name="actionOpen_xyy">
