xyy template guide and xy format
Added a guide to the custom .xyy format and a tiny update to include .xy files

--- a/_lib/_main.ui
+++ b/_lib/_main.ui
@@ -162,7 +162,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>*.xye</string>
+    <string>*.xye *.xy</string>
    </property>
   </action>
   <action name="actionAbout">
