--- a/Reel1.0/_lib/icons.qrc
+++ b/Reel1.0/_lib/icons.qrc
@@ -6,6 +6,7 @@
         <file>icons/Update.png</file>
         <file>icons/Main.png</file>
         <file>icons/Lambda.png</file>
+        <file>icons/Q.png</file>
         <file>icons/Autorange.png</file>
         <file>icons/Next.png</file>
         <file>icons/Previous.png</file>
